--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,31 @@
 {
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:react/recommended",
+    "plugin:prettier/recommended"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": ["@typescript-eslint", "react"],
   "rules": {
-    "jsx-a11y/alt-text": "error"
+    "react/react-in-jsx-scope": "off",
+    "prettier/prettier": [
+      "error",
+      {
+        "singleQuote": false,
+        "tabWidth": 2
+      }
+    ]
+    // "linebreak-style": ["error", "unix"]
+    // "indent": ["error", "tab"],
+    // "semi": ["error", "always"]
   }
 }
