--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
     "plugin:@typescript-eslint/recommended",
     "plugin:react/recommended",
     "plugin:prettier/recommended"
+
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -16,6 +17,11 @@
   },
   "plugins": ["@typescript-eslint", "react"],
   "rules": {
-    "jsx-a11y/alt-text": "error"
+    "jsx-a11y/alt-text": "off",
+    "react/no-unknown-property":"off",
+    "prettier/prettier":"off",
+    "@typescript-eslint/ban-types": "off",
+    "react/no-unescaped-entities":"off",
+    "no-empty-pattern":"off"
   }
 }
