--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.2.6",
     "@typescript-eslint/parser": "^5.0.0",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router": "^6.14.1",
     "react-router-dom": "^6.14.1",
@@ -50,12 +51,12 @@
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.22.5",
     "@types/lodash": "^4.14.195",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "eslint": "^8.46.0",
     "eslint-config-prettier": "^8.9.0",
     "eslint-config-standard-with-typescript": "^37.0.0",
     "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-n": "^16.0.1",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-promise": "^6.1.1",
