--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,8 @@
     "prettier/prettier":"off",
     "@typescript-eslint/ban-types": "off",
     "react/no-unescaped-entities":"off",
-    "no-empty-pattern":"off"
+    "no-empty-pattern":"off",
+    "@typescript-eslint/no-unused-vars":"off",
+    "@typescript-eslint/no-explicit-any":"off"
   }
 }
